--- a/web-nba/frontend/index.html
+++ b/web-nba/frontend/index.html
@@ -5,36 +5,147 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NBA Stats - Vive el Juego</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!-- Barra de navegación -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img src="assets/nba-logo.png" alt="NBA Logo" height="30" class="d-inline-block align-top">
+        NBA Stats
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="partidos">Partidos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="equipos">Equipos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="estadisticas">Estadísticas</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Añade esto dentro de <body> -->
+<div id="contenido-principal">
+  <div id="partidos-hoy" class="container"></div>
+  <div id="contenido-equipos" class="container"></div>
+  <div id="estadisticas-container" class="container"></div>
+</div>
 
   <!-- Hero principal -->
   <section class="hero">
     <div class="overlay">
       <h1>NBA Stats</h1>
       <p>Disciplina. Energía. Pasión. El juego está en tus manos.</p>
+      <div class="search-box">
+        <input type="text" id="search-input" placeholder="Buscar jugador..." autocomplete="off">
+        <button id="search-btn" class="btn btn-primary">
+            <i class="fas fa-search"></i> Buscar
+        </button>
+        <div id="search-results" class="search-results-dropdown"></div>
+        </div>
     </div>
   </section>
 
-  <!-- Partidos del día -->
-  <section class="partidos-dia">
-    <h2>Partidos de Hoy</h2>
-    <div class="cards" id="partidos-hoy"></div>
-  </section>
+  <!-- Contenido dinámico -->
+  <div class="container mt-5">
+    <div class="row">
+      <!-- Columna principal -->
+      <div class="col-lg-8">
+        <!-- Partidos del día -->
+        <section class="partidos-dia mb-5">
+          <div class="section-header">
+            <h2>Partidos de Hoy</h2>
+            <div class="date-selector">
+              <input type="date" id="date-picker" class="form-control">
+            </div>
+          </div>
+          <div class="cards" id="partidos-hoy">
+            <div class="loading-spinner"></div>
+          </div>
+        </section>
 
-  <!-- Resultados recientes -->
-  <section class="resultados">
-    <h2>Últimos Resultados</h2>
-    <div class="cards" id="resultados-recientes"></div>
-  </section>
+        <!-- Resultados recientes -->
+        <section class="resultados mb-5">
+          <div class="section-header">
+            <h2>Últimos Resultados</h2>
+            <select id="team-filter" class="form-select">
+              <option value="all">Todos los equipos</option>
+              <!-- Opciones se llenarán con JS -->
+            </select>
+          </div>
+          <div class="cards" id="resultados-recientes"></div>
+        </section>
+      </div>
 
-  <!-- Próximas fechas -->
-  <section class="proximos">
-    <h2>Próximos Encuentros</h2>
-    <div class="cards" id="proximos-partidos"></div>
-  </section>
+      <!-- Sidebar -->
+      <div class="col-lg-4">
+        <!-- Próximas fechas -->
+        <section class="proximos mb-4">
+          <h2>Próximos Encuentros</h2>
+          <div class="cards" id="proximos-partidos"></div>
+        </section>
 
-  <script src="script.js"></script>
+        <!-- Clasificación -->
+        <section class="clasificacion mb-4">
+          <h2>Clasificación</h2>
+          <ul class="nav nav-tabs" id="conference-tabs">
+            <li class="nav-item">
+              <a class="nav-link active" data-conference="east">Este</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-conference="west">Oeste</a>
+            </li>
+          </ul>
+          <div class="standings" id="conference-standings"></div>
+        </section>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer class="bg-dark text-white py-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h5>NBA Stats</h5>
+          <p>Todos los datos actualizados de la NBA en un solo lugar.</p>
+        </div>
+        <div class="col-md-6 text-md-end">
+          <p>&copy; 2023 NBA Stats. Todos los derechos reservados.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Modal para detalles -->
+  <div class="modal fade" id="gameModal" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="gameModalTitle">Detalles del Partido</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body" id="gameModalBody">
+          <!-- Contenido dinámico -->
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/api.js" type="module"></script>
+  <script src="js/main.js" type="module"></script>
 </body>
 </html>
